syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.airqualityservice";
option java_outer_classname = "AirQualityServiceImpl";

package airquality;

// Interface exported by the server.
service AirQualityService {
  rpc GetLatestReading (GetLatestReadingRequest) returns (GetLatestReadingResponse) {}
  rpc GetHistoricalData (GetHistoricalDataRequest) returns (stream GetHistoricalDataResponse) {}
//  rpc SubscribeToAlerts (SubscribeToAlertsRequest) returns (stream Alert) {}
}

message GetLatestReadingRequest {
  string latestreading = 1;
}

message GetLatestReadingResponse {
  int32 pm2_5 = 1;
}

message GetHistoricalDataRequest {
  string latestreading = 1;
  int32 num_days = 2;
}

message GetHistoricalDataResponse {
  string sensor_id = 1;
  int32 pm2_5 = 2;
}

//message Alert {
//  string sensor_id = 1;
//  float pm2_5 = 2;
//  float pm10 = 3;
//  float ozone = 4;
//  float nitrogen_dioxide = 5;
//  float sulfur_dioxide = 6;
//  int64 timestamp = 7;
//  string message = 8;
//}



//message Subscribe




